--- a/CogSearchWebApiSkills/CogSearchInitializer/CogSearchInitializer.csproj
+++ b/CogSearchWebApiSkills/CogSearchInitializer/CogSearchInitializer.csproj
@@ -5,4 +5,17 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.KeyVault.Core" Version="3.0.1" />
+    <PackageReference Include="Microsoft.Azure.Search" Version="5.0.3" />
+    <PackageReference Include="Microsoft.Azure.Search.Common" Version="5.0.3" />
+    <PackageReference Include="Microsoft.Azure.Search.Data" Version="5.0.3" />
+    <PackageReference Include="Microsoft.Azure.Search.Service" Version="5.0.3" />
+    <PackageReference Include="Microsoft.Rest.ClientRuntime" Version="2.3.18" />
+    <PackageReference Include="Microsoft.Rest.ClientRuntime.Azure" Version="3.3.18" />
+    <PackageReference Include="Microsoft.Spatial" Version="7.5.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
+  </ItemGroup>
+
 </Project>
