--- a/CogSearchWebApiSkills/CogSearchWebApiSkills/CogSearchWebApiSkills.csproj
+++ b/CogSearchWebApiSkills/CogSearchWebApiSkills/CogSearchWebApiSkills.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.Search" Version="5.0.3" />
+    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.24" />
+  </ItemGroup>
+
 </Project>
