--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@types/d3": "5.5.0",
     "@types/react-redux": "6.0.12",
+    "@types/react-test-renderer": "^16.0.3",
     "d3": "5.7.0",
     "patch-package": "^5.1.2",
     "prop-types": "15.6.2",
@@ -13,6 +14,7 @@
     "react-dom": "^16.7.0",
     "react-redux": "6.0.0",
     "react-scripts-ts": "^4.0.8",
+    "react-test-renderer": "^16.7.0",
     "react-uwp": "1.2.2",
     "redux": "4.0.1",
     "redux-thunk": "2.3.0"
