Feat/cog search web api skills (#5)
* Renamed Class1.cs to CogSearchWebApiSkills.cs

* Created variables for cloud resource configurations and clients

* Created a keys class to store sensitive keys. Added keys.cs to gitignore. Created client for Azure Search Service. Created function to delete existing indexing resources.

* Program now sets up a container for the image store skill for the preview images

* Created function to make the document datasource and link it to the Azure Search resource

* Added method to generate azure function host key

* Added a function to create the skillset

* Created functions to generate Synonyms and create the index from the index.json

* Program now checks the indexer status every 5 seconds. Finished the core of the initializer's Program.cs except for the webapp deployment and optional full index query

* Created a Config.cs public class int he CogSearchWebApiSkills to store non-sensitive constant values. Added notes to the Program.cs. Began Writing the code to deploy the Facet Graph Function

* Created SearchClientHelper for CogSearchWebApiSkills

* finished facet graph function

* Created helper classes for the webapiskills. Added The Cryptonym Linker Function

* Added the cryptonym-linker-list function

* added image store function

* added the Hocr function

* added translator to the skillset

* changed keys

* Fixed configuration problems

--- a/.gitignore
+++ b/.gitignore
@@ -340,6 +340,10 @@ ASALocalRun/
 # BeatPulse healthcheck temp database 
 healthchecksdb
 
+
+#New Additions for Cogntive Search Project
+keys.cs
+
 # Frontend
 # dependencies
 frontend/node_modules
